tdf#158277 sw_redlinehide: fix find bar string

FindTextFieldControl::SetTextToSelected_Impl() uses the XModel to
retrieve the currently selected text, which naturally includes deleted
text.

Instead, use view API XTextViewCursor to get the visible selected text.

(regression from commit ae2232366f00e08c1855667cfaf068269ac9af2f)

Change-Id: I302ea90a7407af6e3ae7b62a2f373dccb33b8275
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162245
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 1f540c49e68b28a360ee5c32d60ab1bed3837eec)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162229
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>